; ModuleID = '/home/carl/AnghaBench/xLua/build/luajit-2.1.0b2/src/host/extr_minilua.c_lua_touserdata.c'
source_filename = "/home/carl/AnghaBench/xLua/build/luajit-2.1.0b2/src/host/extr_minilua.c_lua_touserdata.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*, i32)* @lua_touserdata to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @lua_touserdata(i32* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load i32*, i32** %4, align 8
  %8 = load i32, i32* %5, align 4
  %9 = call i32 @index2adr(i32* %7, i32 %8)
  store i32 %9, i32* %6, align 4
  %10 = load i32, i32* %6, align 4
  %11 = call i32 @ttype(i32 %10)
  switch i32 %11, label %21 [
    i32 7, label %12
    i32 2, label %18
  ]

12:                                               ; preds = %2
  %13 = load i32, i32* %6, align 4
  %14 = call i32 @rawuvalue(i32 %13)
  %15 = add nsw i32 %14, 1
  %16 = sext i32 %15 to i64
  %17 = inttoptr i64 %16 to i8*
  store i8* %17, i8** %3, align 8
  br label %22

18:                                               ; preds = %2
  %19 = load i32, i32* %6, align 4
  %20 = call i8* @pvalue(i32 %19)
  store i8* %20, i8** %3, align 8
  br label %22

21:                                               ; preds = %2
  store i8* null, i8** %3, align 8
  br label %22

22:                                               ; preds = %21, %18, %12
  %23 = load i8*, i8** %3, align 8
  ret i8* %23
}

declare dso_local i32 @index2adr(i32*, i32) #1

declare dso_local i32 @ttype(i32) #1

declare dso_local i32 @rawuvalue(i32) #1

declare dso_local i8* @pvalue(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
